--- a/jamesarthur.html
+++ b/jamesarthur.html
@@ -16,7 +16,7 @@
 
     <center>
         <div class="audio-card" style="background-color: gray; margin-bottom: 5rem;">
-            <button onclick="window.location.href='musicweb.html';" style="margin-bottom: 1rem;"><i class="fa fa-arrow-left mr-3"></i>Back to Main Page</button>
+            <button onclick="window.location.href='index.html';" style="margin-bottom: 1rem;"><i class="fa fa-arrow-left mr-3"></i>Back to Main Page</button>
             <img src="https://images.genius.com/8819608496104d64a6c136b5828d89c9.1000x1000x1.jpg" alt="Album Art">
             <h1 style="font-weight: 800; font-size: larger; margin-bottom: 1rem;">Can I Be Him</h1>
             <audio id="audio" controls>
