--- a/theweeknd.html
+++ b/theweeknd.html
@@ -16,7 +16,7 @@
 
     <center>
         <div class="audio-card" style="background-color: gray; margin-bottom: 5rem;">
-            <button onclick="window.location.href='musicweb.html';" style="margin-bottom: 1rem;"><i class="fa fa-arrow-left mr-3"></i>Back to Main Page</button>
+            <button onclick="window.location.href='index.html';" style="margin-bottom: 1rem;"><i class="fa fa-arrow-left mr-3"></i>Back to Main Page</button>
             <img src="https://th.bing.com/th/id/R.f281562c2c4bd152aea50ec18668c835?rik=ch75TF4zlMYPVg&riu=http%3a%2f%2fthatgrapejuice.net%2fwp-content%2fuploads%2f2016%2f09%2fthe-weekend-starboy-thatgrapejuice.jpg&ehk=UY8ZVSk%2frLCwzkat%2b4DfL476%2fohx0TwePUDW8%2f33FxU%3d&risl=&pid=ImgRaw&r=0" alt="Album Art">
             <h1 style="font-weight: 800; font-size: larger; margin-bottom: 1rem;">Starboy</h1>
             <audio id="audio" controls>
