--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musicify</title>
+    <title>Musicly</title>
     <link rel="stylesheet" href="musicweb.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <body>
     <section class="bg-center bg-no-repeat bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg')] bg-gray-700 bg-blend-multiply">
         <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
-            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">Welcome To Musicify</h1>
+            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">Welcome To Musicly</h1>
             <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Here at Musicify is the best music web streaming!!</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
                 <a href="#artist-section" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
@@ -33,18 +33,16 @@
     <section style="display: flex; flex-wrap: wrap; margin-bottom: 5rem;" class="james">
         <div class="tulisan" style="flex: 1; margin-left: 7rem; margin-top: 7rem; margin-right: 40px;">
             <h1 style="font-weight:800; font-size: large; color: #333;">James Arthur</h1>
-            <p>James Arthur adalah seorang penyanyi dan penulis lagu asal Inggris. Dia menjadi terkenal setelah memenangkan seri kesembilan The X Factor pada tahun 2012. Singel debutnya, 
-                sebuah cover dari "Impossible" milik Shontelle, dirilis oleh Syco Music setelah final, dan debut di nomor satu di UK Singles Chart. Sejak itu, singel tersebut telah terjual lebih dari 2,5 juta kopi di seluruh dunia, 
-                menjadikannya singel pemenang yang paling sukses dalam sejarah acara tersebut.</p>
-                <a href="jamesarthur.html" class="mt-3 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-                    Song
-                    <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                    </svg>
-                </a>
+            <p>James Arthur is a singer and songwriter from England. He rose to fame after winning the ninth series of The X Factor in 2012. His debut single, a cover of Shontelle's "Impossible," was released by Syco Music after the final and debuted at number one on the UK Singles Chart. Since then, the single has sold over 2.5 million copies worldwide, making it the most successful winner's single in the show's history.</p>
+            <a href="jamesarthur.html" class="mt-3 inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+                Song
+                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
         </div>
         <div class="card" style="flex: 1; margin-left: 10px; margin-top: 7rem; margin-right: 5rem;">
-            <img src="https://lastfm.freetls.fastly.net/i/u/ar0/227ed504ab5e21bfe686e3c014a9c61a.jpg" alt="Avatar" style="width:60%; height: auto;"> 
+            <img src="https://lastfm.freetls.fastly.net/i/u/ar0/227ed504ab5e21bfe686e3c014a9c61a.jpg" alt="James Arthur" style="width:60%; height: auto;"> 
         </div>        
     </section>
 
